# kit-kalman-ros2

./: .gitignore  KAIA.md  README.md  kalman_hardware.repos  kalman_software.repos
kaiaai/: README.md  package.xml
kaiaai_bringup/: CMakeLists.txt  package.xml
kaiaai_bringup/launch/: kalman_bringup.launch.py  physical.launch.py
kaiaai_bringup/rviz/: bringup.rviz
kaiaai_telemetry/: CMakeLists.txt  package.xml
kaiaai_telemetry/config/: telem.yaml
kaiaai_telemetry/src/: lds_delta_2a.h  lds_delta_2g.h  lds_ldrobot_ld19.h  telem.cpp  telem_test_pub.cpp
kalman_control/: CMakeLists.txt  README.md  package.xml
kalman_control/config/: diff_drive_controller.yaml  diff_drive_controller_real.yaml
kalman_control/docs/: ros2_control.drawio
kalman_control/launch/: uvrobot_controller.launch.py
kalman_control/scripts/: kalman_control.py
kalman_description/: CMakeLists.txt  README.md  package.xml
kalman_description/launch/: display_rviz.launch.py  test.launch.py
kalman_description/meshes/: antena.stl  carcasa.stl  rueda.stl
kalman_description/rviz/: display.rviz
kalman_description/urdf/: kalman.urdf  kalman.urdf.xacro
kalman_description/urdf/xacro/: caster_wheel.xacro  chassis.xacro  gazebo.xacro  inertial.xacro  properties.xacro  ros2_control.xacro  sensors.xacro  wheel.xacro
kalman_utils/: CMakeLists.txt  package.xml
kalman_utils/config/: imu_calibration.yaml  madgwick.yaml
kalman_utils/launch/: madgwick.launch.py
kalman_utils/scripts/: imu_calibration.py
kalman_utils/src/: imu.cpp
makerspet_mini/: README.md
makerspet_mini/config/: cartographer_lds_2d.lua  navigation.yaml  navigation_pursuit.yaml  telem.yaml
makerspet_mini/rviz/: custom.rviz
makerspet_mini/urdf/: robot.urdf.xacro
