<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kalman_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="141019@unsaac.edu.pe">bea</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>


  <depend>rclpy</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>rclcpp</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>

  <depend>diff_drive_controller</depend>
  <depend>joint_state_broadcaster</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
